JWT, roles, audiencias